Fix minor issues with NetlifyCMS

--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/src/pages/admin/config.yml" rel="cms-config-url" type="text/yaml" />
+  <link href="/ncms-config.yml" rel="cms-config-url" type="text/yaml" />
   <title>Content Manager</title>
 </head>
 <body>
