--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,7 @@ import Projects from '../components/Projects.astro';
 		<div class="lg:w-3/6 px-12 lg:px-0 m-auto mt-16 mb-16">
 			<Navbar></Navbar>
 			<p class="text-md mt-5">
-			Hey there, my name is Ali Mosallaei. I am a current Senior at Lexington High School.
-			<br><br>
-			I'm a podcaster, developer, researcher at Northeastern University, and future engineer applying to college. I also write a few blog posts at times, check them out if you like to see what I'm thinking.
+			Hey there, my name is Ali Mosallaei. I am a current Senior at Lexington High School. I'm a podcaster, developer, researcher at Northeastern University, and future engineer applying to college. I also write a few blog posts at times, check them out if you like to see what I'm thinking.
 			<br><br>
 			I have a GitHub, but it's pretty barren right now. Need to get in touch with me? Shoot me an email at ali@mosallaei.com.</p>
 			<br><hr><br>
