Trying to fix tailwind css build.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,7 @@ import Projects from '../components/Projects.astro';
 	<meta name="viewport" content="width=device-width">
 	<title>Ali Mosallaei</title>
 
-	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="stylesheet" href={Astro.resolve('../styles/global.css')}>
+	<link rel="icon" type="image/x-icon" href="https://emojicdn.elk.sh/%F0%9F%93%A6?style=google" />
 	<script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
  	<script src="https://cdn.tailwindcss.com"></script>
 </head>
