--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -12,6 +12,8 @@ export function getStaticPaths() {
 }
 
 const { Content, title, desc, date } = Astro.props.post;
+var content = `<div class="markdown">${Astro.props.post.astro.html}</div>`
+console.log(content)
 const { slug, readingTime } = getPostData(Astro.props.post);
 ---
 <html lang="en">
@@ -20,10 +22,13 @@ const { slug, readingTime } = getPostData(Astro.props.post);
 	<meta name="viewport" content="width=device-width">
 	<title>{title} - A Post by Ali Mosallaei</title>
 
-	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="https://emojicdn.elk.sh/%F0%9F%93%A6?style=google" />
  	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+	<style global>
+		@import '../../styles/posts.css';
+	</style>
 	<main>
 		<div class="lg:w-3/6 px-12 lg:px-0 m-auto mt-16 mb-16">
 			<Navbar></Navbar>
@@ -34,7 +39,7 @@ const { slug, readingTime } = getPostData(Astro.props.post);
 					<div class="italic">{readingTime}</div>
 				</div>
 				<div class="px-6">
-					<Content />
+					{content}
 				</div>
             </div>
 		</div>
