--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,7 +8,7 @@ import Posts from '../components/Posts.astro';
 	<meta name="viewport" content="width=device-width">
 	<title>Blog - Ali Mosallaei</title>
 
-	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="https://emojicdn.elk.sh/%F0%9F%93%A6?style=google" />
 	<link rel="stylesheet" href={Astro.resolve('../styles/global.css')}>
  	<script src="https://cdn.tailwindcss.com"></script>
 </head>
